| Bug #44749 | ndb_config --xml: hostname as valid key and MaxNoOfOpenFiles need fix | ||
|---|---|---|---|
| Submitted: | 8 May 2009 12:57 | Modified: | 11 Sep 2009 12:22 |
| Reporter: | Jan S Berg | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-6.3 | OS: | Any |
| Assigned to: | Magnus BlÄudd | CPU Architecture: | Any |
| Tags: | 6.3.20 | ||
[8 May 2009 12:57]
Jan S Berg
[8 May 2009 15:35]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/73664
[18 May 2009 12:15]
Bugs System
Pushed into 5.1.34-ndb-6.3.25 (revid:magnus.blaudd@sun.com-20090518121246-zp3gju1pobzcb0x8) (version source revid:magnus.blaudd@sun.com-20090518121246-zp3gju1pobzcb0x8) (merge vers: 5.1.34-ndb-6.3.25) (pib:6)
[18 May 2009 13:12]
Bugs System
Pushed into 5.1.34-ndb-7.0.6 (revid:magnus.blaudd@sun.com-20090518130935-dtpb708as2r6fzn6) (version source revid:magnus.blaudd@sun.com-20090518121313-bajhjq3qrvdpd6f3) (merge vers: 5.1.34-ndb-7.0.6) (pib:6)
[19 May 2009 13:59]
Bugs System
Pushed into 5.1.34-ndb-6.3.25 (revid:magnus.blaudd@sun.com-20090519135829-xedif18zi226cs78) (version source revid:magnus.blaudd@sun.com-20090519135829-xedif18zi226cs78) (merge vers: 5.1.34-ndb-6.3.25) (pib:6)
[19 May 2009 14:02]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/74477
[19 May 2009 14:04]
Bugs System
Pushed into 5.1.34-ndb-7.0.6 (revid:magnus.blaudd@sun.com-20090519140027-dt0vrn3e8pkpmi9c) (version source revid:magnus.blaudd@sun.com-20090519140027-dt0vrn3e8pkpmi9c) (merge vers: 5.1.34-ndb-7.0.6) (pib:6)
[11 Sep 2009 12:22]
Jon Stephens
Documented bugfix in the NDB-6.3.25 and 7.0.6 changelogs as follows:'
The output of ndb_config --xml did not provide information about
all sections of the configuration file.
Closed.
[11 Sep 2009 13:45]
Jon Stephens
Corrected changelog entry:
ndbconfig --xml did not output any entries for the HostName
parameter. In addition, the default listed for MaxNoOfFiles was
outside the allowed range of values.
(Accidentally switched with another bug report.)
