Bug#44749 ndb_config --xml: hostname as valid key and MaxNoOfOpenFiles need fix  - HostName in sections for [ndbd], [ndb_mgmd] and [mysqld] was marked as "internal",    changed that to "used" so that they are now visible. Also set default value    to undefined, ie. no default value.  - MaxNoOfOpenFiles had illegal default value 0(outside min/max), changed to    undefined, i.e no default value.