storage/ndb/src/mgmsrv/ConfigInfo.cpp
@@ -420,10 +420,10 @@ const ConfigInfo::ParamInfo ConfigInfo::m_ParamInfo[] = {
     "HostName",
     DB_TOKEN,
     "Name of computer for this node",
-    ConfigInfo::CI_INTERNAL,
+    ConfigInfo::CI_USED,
     false,
     ConfigInfo::CI_STRING,
-    "localhost",
+    UNDEFINED,
     0, 0 },
 
   {
@@ -1068,7 +1068,7 @@ const ConfigInfo::ParamInfo ConfigInfo::m_ParamInfo[] = {
     ConfigInfo::CI_USED,
     false,
     ConfigInfo::CI_INT,
-    "0",
+    UNDEFINED,
     "20",
     STR_VALUE(MAX_INT_RNIL) },
   
@@ -1648,10 +1648,10 @@ const ConfigInfo::ParamInfo ConfigInfo::m_ParamInfo[] = {
     "HostName",
     API_TOKEN,
     "Name of computer for this node",
-    ConfigInfo::CI_INTERNAL,
+    ConfigInfo::CI_USED,
     false,
     ConfigInfo::CI_STRING,
-    "",
+    UNDEFINED,
     0, 0 },
 
   {
@@ -1807,10 +1807,10 @@ const ConfigInfo::ParamInfo ConfigInfo::m_ParamInfo[] = {
     "HostName",
     MGM_TOKEN,
     "Name of computer for this node",
-    ConfigInfo::CI_INTERNAL,
+    ConfigInfo::CI_USED,
     false,
     ConfigInfo::CI_STRING,
-    "",
+    UNDEFINED,
     0, 0 },
 
   {
